--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -13,9 +13,9 @@ body:
         required: true
   - type: input
     attributes:
-      label: Affected Build
-      description: List the affected build that this issue applies to.
-      placeholder: 1.0.0 / 1.0.1 / Latest Dev
+      label: Affected Build(s)
+      description: List the affected build(s) that this issue applies to.
+      placeholder: Nightly 1234 / Canary 1234
     validations:
       required: true
   - type: textarea
