--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,11 @@
-name: citra-enhanced-build
+name: citra-build
 
 on:
   push:
     branches: [ "*" ]
     tags: [ "*" ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   source:
@@ -26,7 +28,7 @@ jobs:
       matrix:
         target: ["appimage", "fresh"]
     container:
-      image: ishan09811/build-environments:linux-${{ matrix.target }}
+      image: pablomk7/build-environments:linux-${{ matrix.target }}
       options: -u 1001
     env:
       CCACHE_DIR: ${{ github.workspace }}/.ccache
@@ -79,7 +81,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.target }}-
       - name: Install tools
-        run: brew install ccache ninja spirv-tools
+        run: brew install ccache ninja
       - name: Build
         run: ./.ci/macos.sh
       - name: Prepare outputs for caching
@@ -151,11 +153,6 @@ jobs:
       - name: Install extra tools (MSVC)
         run: choco install ccache ninja wget
         if: ${{ matrix.target == 'msvc' }}
-      - name: Install vulkan-sdk (MSVC)
-        run: |
-          wget https://sdk.lunarg.com/sdk/download/1.3.280.0/windows/VulkanSDK-1.3.280.0-Installer.exe -O D:/a/_temp/vulkan.exe
-          D:/a/_temp/vulkan.exe --accept-licenses --default-answer --confirm-command install
-        if: ${{ matrix.target == 'msvc' }}
       - name: Set up MSYS2
         uses: msys2/setup-msys2@v2
         if: ${{ matrix.target == 'msys2' }}
@@ -164,7 +161,7 @@ jobs:
           update: true
           install: git make p7zip
           pacboy: >-
-            toolchain:p ccache:p cmake:p ninja:p spirv-tools:p
+            toolchain:p ccache:p cmake:p ninja:p
             qt6-base:p qt6-multimedia:p qt6-multimedia-wmf:p qt6-tools:p qt6-translations:p
       - name: Disable line ending translation
         run: git config --global core.autocrlf input
@@ -177,27 +174,20 @@ jobs:
         with:
           name: ${{ env.OS }}-${{ env.TARGET }}
           path: artifacts/
-
-  Android-ARM64:
-      runs-on: ubuntu-latest
-
-      strategy:
-        matrix:
-          build_type:
-            - release
-      env:
-        CCACHE_DIR: ${{ github.workspace }}/.ccache
-
-      steps:
-      - name: Set BUILD_TYPE variable
-        run: echo "BUILD_TYPE=${{ matrix.build_type }}" >> $GITHUB_ENV
-
+  android:
+    runs-on: ubuntu-latest
+    env:
+      CCACHE_DIR: ${{ github.workspace }}/.ccache
+      CCACHE_COMPILERCHECK: content
+      CCACHE_SLOPPINESS: time_macros
+      OS: android
+      TARGET: universal
+    steps:
       - uses: actions/checkout@v4
-      - name: Fetch submodules
-        run: git submodule update --init --recursive
-
-      - name: Setup Cache
-        uses: actions/cache@v2
+        with:
+          submodules: recursive
+      - name: Set up cache
+        uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
@@ -206,47 +196,33 @@ jobs:
           key: ${{ runner.os }}-android-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-android-
-
-        env:
-           SEGMENT_DOWNLOAD_TIMEOUT_MINS: '1'
-
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'zulu'
-          java-version: '17'
-          cache: 'gradle'
-
+      - name: Set tag name
+        run: |
+          if [[ "$GITHUB_REF_NAME" =~ ^canary- ]] || [[ "$GITHUB_REF_NAME" =~ ^nightly- ]]; then
+              echo "GIT_TAG_NAME=$GITHUB_REF_NAME" >> $GITHUB_ENV
+          fi
+          echo $GIT_TAG_NAME
       - name: Deps
         run: |
-            sudo add-apt-repository -y ppa:theofficialgman/gpu-tools
-            sudo apt-get update -y
-            sudo apt-get install ccache glslang-dev glslang-tools apksigner -y
-
+          sudo add-apt-repository -y ppa:theofficialgman/gpu-tools
+          sudo apt-get update -y
+          sudo apt-get install ccache apksigner -y
       - name: Build
-        run: |
-          chmod +x ./.ci/export.sh
-          ./.ci/export.sh
-
-          # Build the Android app with Gradle
-          cd src/android
-          ./gradlew assemble${{ env.BUILD_TYPE }}
-          ls -R app/build/outputs
-          cd ../..
-          chmod +x ./.ci/end.sh
-          ./.ci/end.sh
+        run: JAVA_HOME=$JAVA_HOME_17_X64 ./.ci/android.sh
         env:
-          ANDROID_KEYSTORE_FILE: ks.jks
           ANDROID_KEYSTORE_B64: ${{ secrets.ANDROID_KEYSTORE_B64 }}
           ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
           ANDROID_KEYSTORE_PASS: ${{ secrets.ANDROID_KEYSTORE_PASS }}
-
-      - name: Upload artifacts
+      - name: Pack
+        run: ../../../.ci/pack.sh
+        working-directory: src/android/app
+        env:
+          UNPACKED: 1
+      - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: Android-APK
-          path: |
-            ./src/android/app/build/outputs/apk/canary/${{ env.BUILD_TYPE }}/app-canary-${{ env.BUILD_TYPE }}.apk
+          name: ${{ env.OS }}-${{ env.TARGET }}
+          path: src/android/app/artifacts/
   ios:
     runs-on: macos-14
     if: ${{ !startsWith(github.ref, 'refs/tags/') }}
@@ -271,3 +247,24 @@ jobs:
         run: brew install ccache ninja
       - name: Build
         run: ./.ci/ios.sh
+  release:
+    runs-on: ubuntu-latest
+    needs: [windows, linux, macos-universal, android, source]
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
+    steps:
+      - uses: actions/download-artifact@v4
+      - name: Create release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: ${{ github.ref_name }}
+          draft: false
+          prerelease: false
+      - name: Upload artifacts
+        uses: alexellis/upload-assets@0.4.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          asset_paths: '["./**/*.tar.*","./**/*.AppImage","./**/*.7z","./**/*.zip","./**/*.apk","./**/*.aab"]'
