--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -174,6 +174,9 @@ endif()
 if(ENABLE_VULKAN)
     add_compile_definitions(ENABLE_VULKAN)
 endif()
+if(ENABLE_DEVELOPER_OPTIONS)
+    add_compile_definitions(ENABLE_DEVELOPER_OPTIONS)
+endif()
 
 add_subdirectory(common)
 add_subdirectory(core)
